--- a/browser_sdk/index.html
+++ b/browser_sdk/index.html
@@ -51,7 +51,7 @@
             <button id="setmobile" class="statebtns" data-cmd="STM">Green</button>
             <button id="setlocked" class="statebtns" data-cmd="STL">Blue</button>
         </div>
-        <button id="profileconfig" >SmartKnob Config</button><br>
+        <button id="profileconfig" >SmartKnob Profile</button><br>
         <div class="profileconfig_dialog">
             
             <div class="profilegroup">
