--- a/browser_sdk/index.html
+++ b/browser_sdk/index.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     
-    <div>
+    <div class="changelog">
         <h2>Changelog</h2>
         <h3>2025.03.02</h3>
         <ul>
