--- a/browser_sdk/index.html
+++ b/browser_sdk/index.html
@@ -100,10 +100,10 @@
                 <button style="width: 100px; text-align: center;" class="statebtns btn_mid change_offset" data-change="0.01">+.01</button>
                 <button style="width: 100px; text-align: center;" class="statebtns btn_mid change_offset" data-change="0.1">+.1</button>
             </div>
-            <div class="profilegroup" style="max-width: none;">
-                <label>FOC Direction:</label>
+            <div class="profilegroup">
+                <label style="max-width: none;">FOC Direction:</label>
                 <label style="width: 150px;"><input type="radio" value="1" name="motor_foc" checked> CW</label>
-                <label style="width: 150px;"><input type="radio" value="-1" name="motor_foc"> CCW</label> 
+                <label style="width: 190px;"><input type="radio" value="-1" name="motor_foc"> CCW</label> 
             </div>
             <div class="profilegroup">
                 <label id="motorpush" style="width: 100%; max-width: 100%;"><input type="checkbox" id="profile_motor_send_on_change"> Send motor config on value change</label>
