Web responsive part, some finetuning

--- a/browser_sdk/index.html
+++ b/browser_sdk/index.html
@@ -37,8 +37,8 @@
             <button style="width: 100%; text-align: center;" class="statebtns" id="strain_push">Push</button>
             <input style="width: 100%; text-align: right;" name="strain_raw" value="0" type="number" disabled>
             <span style="width: 100px;" >raw</span>
-            <button style="width: 100px; text-align: center;" class="statebtns btn_small" id="strain_set_top">Set top</button>
-            <button style="width: 100px; text-align: center;" class="statebtns btn_small" id="strain_set_low">Set low</button>
+            <button style="width: 130px; text-align: center;" class="statebtns btn_small" id="strain_set_top">Set top</button>
+            <button style="width: 130px; text-align: center;" class="statebtns btn_small" id="strain_set_low">Set low</button>
         </div>
         <div class="profilegroup">
             <label for="knob_button" class="pwroff">Button:</label>
@@ -94,7 +94,7 @@
             
             <div class="profilegroup">
                 <label for="motor_zero">Motor Zero El. Offset:</label>
-                <input style="width: 100px" name="motor_zero" value="6.77" type="number">
+                <input style="width: 2.5em" name="motor_zero" value="6.77" type="number">
                 <button style="width: 100px; text-align: center;" class="statebtns btn_mid change_offset" data-change="-0.1">-.1</button>
                 <button style="width: 100px; text-align: center;" class="statebtns btn_mid change_offset" data-change="-0.01">-.01</button>
                 <button style="width: 100px; text-align: center;" class="statebtns btn_mid change_offset" data-change="0.01">+.01</button>
